# AlphaTurncoats

./: LICENSE  README.md  setup.cfg
tests/: test_bag.py  test_board.py
turncoats/: bag.py  board.py  main.py  player.py  stone.py
