[metadata]
name = turncoats
version = 0.0.1
description = Board game RL
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Paolo-Fermin/AlphaTurncoats
author = Paolo Fermin
author_email = paolofermin@vt.edu
classifiers = 
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find_namespace:
python_requires = >=3.8
include-package-data = True

[options.packages.find]
include=turncoats.*

[options.extras_require]
dev = 
    black
    build
    docutils
    flake8
    isort
    mypy
    myst_parser
    pylint
    pytest
    pytest-cov
    sphinx
    sphinx-autobuild
    sphinx-rtd-theme

[options.package_data]
turncoats = py.typed

